--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
             signInWithEmailAndPassword(auth, email, password)
                 .then((userCredential) => {
                     // Redirection vers votre site Canva après connexion réussie
-                    window.location.href = "https://testnextgen.my.canva.site/nextgen-site-web"; // Remplacez par l'URL de votre site Canva
+                    window.location.href = "https://gsbr22.github.io/nextgen-website/"; // Remplacez par l'URL de votre site Canva
                 })
                 .catch((error) => {
                     let errorMessage = "Erreur lors de la connexion";
