--- a/index.html
+++ b/index.html
@@ -307,22 +307,40 @@
         }
     </script>
 
-    <!-- Intégration Firebase -->
-    <script type="module">
-        // Importation des modules Firebase
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-app.js";
-        import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-auth.js";
+       <!-- Dans votre formulaire de connexion - remplacez le script Firebase par : -->
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-app.js";
+  import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-auth.js";
 
-        // Configuration Firebase
-        const firebaseConfig = {
-            apiKey: "AIzaSyBzMi3F5vLM0bYxTY1KuBJf7eD6Nx96wsQ",
-            authDomain: "login-ec53a.firebaseapp.com",
-            projectId: "login-ec53a",
-            storageBucket: "login-ec53a.appspot.com",
-            messagingSenderId: "123644267529",
-            appId: "1:123644267529:web:5409efdf896971c655bcd8"
-        };
+  const firebaseConfig = {
+    apiKey: "AIzaSyBzMi3F5vLM0bYxTY1KuBJf7eD6Nx96wsQ",
+    authDomain: "login-ec53a.firebaseapp.com",
+    projectId: "login-ec53a",
+    storageBucket: "login-ec53a.appspot.com",
+    messagingSenderId: "123644267529",
+    appId: "1:123644267529:web:5409efdf896971c655bcd8"
+  };
 
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+
+  document.getElementById("login-btn").addEventListener("click", function(event) {
+    event.preventDefault();
+    
+    if (!validateLoginForm()) return;
+    
+    let email = document.getElementById("login-email").value;
+    let password = document.getElementById("login-password").value;
+
+    signInWithEmailAndPassword(auth, email, password)
+      .then((userCredential) => {
+        // Redirection avec les paramètres dans l'URL
+        window.location.href = `https://gsbr22.github.io/nextgencorp.fr/?loggedIn=true&email=${encodeURIComponent(email)}`;
+      })
+      .catch((error) => {
+        alert("Erreur de connexion: " + error.message);
+      });
+  });
         // Initialisation de Firebase
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
