--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             signInWithEmailAndPassword(auth, email, password)
                 .then((userCredential) => {
                     // Redirection vers votre site Canva après connexion réussie
-                    window.location.href = "https://www.canva.com/design/ABCDEFGHIJKL/your-design"; // Remplacez par l'URL de votre site Canva
+                    window.location.href = "https://gsbr22.github.io/nextgencorp.fr/"; // Remplacez par l'URL de votre site Canva
                 })
                 .catch((error) => {
                     let errorMessage = "Erreur lors de la connexion";
