--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 <body>
     <div class="container">
         <!-- Logo - Remplacez "logo.png" par le chemin de votre logo -->
-        <img src="nextlogo.png" alt="Logo" class="logo">
+        <img src="nextlogo2.png" alt="Logo" class="logo">
         
         <div id="login" class="form active">
             <h2>Connexion</h2>
